# s2r_pipeline

./: .gitignore  CMakeLists.txt  package.xml
include/: Navcore.h  workspace.code-workspace
launch/: detect_target_number.launch  pipeline.launch
msg/: pose.msg
src/: Navcore.cpp  pipeline.cpp
src/scripts/: client.py  detect_grasp_place_server.py  get_number_class_1.py  get_number_class_pose_3.py  get_number_pose_1.py  get_roi_1.py  get_roi_3.py  get_roi_one.py  get_target_number.py  get_target_number_roi.py  grasp_cube_ddd.py  grasp_cube_kevin.py  grasp_ddd.py  map2.pgm  place_cube_ddd.py  pose_detect.c  pose_detect.pyx  predict.py  predict_1.py  redmarkerdetection.c  redmarkerdetection.pyx  setup.py  toServer.py
srv/: TargetNumber.srv
